@@ -3,3 +3,5 @@ Vi körde på varianten stoppursklocka, tänkt för att vara till hjälp för fu
 Vi siktar på VG och vi skulle gärna vilja få feedback på hur vi når upp till det betyget.
 
 När man kör programmet så läser programmet in tio åkare från den bifogade XML-filen. Man får sedan valet att välja vilket typ av lopp man vill köra. Masstart startar alla åkare samtidigt, individuellstart startare åkare med femton eller trettio sekunders mellanrum. Jaktstart baseras på resultatet från senast körda lopp. För att manipulerare en viss åkare, välj den åkaren och tryck sedan på "checkpoint" för att ta en mellantid eller "stop skier" om åkaren går i mål.. För att stoppa ett race, tryck på stop race.För att rensa historik, tryck på Clear history. När programmet avslutas så sparas den senaste historiken tillsammans med åkarna i skiers.xml.
+
+projekter kräver biblioteket JavaFX och bör köras med VM arguments: --module-path "F:\Documents\JavaFX\javafx-sdk-11.0.2\lib" --add-modules javafx.controls,javafx.fxml
